<resources>
    <string name="app_name">MakeUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="favorites">Favorites</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ewg">Ewg</string>
    <string name="vegan">Vegan</string>
    <string name="natural">Natural</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="dior">Dior</string>
    <string name="l_oreal">L\'oreal</string>
    <string name="lip_stick">Lipstick</string>
    <string name="nail_polish">Nail Polish</string>
    <string name="eye_shadow">Eyeshadow</string>
    <string name="mascara">Mascara</string>
    <string name="foundation">Foundation</string>
    <string name="eyeliner">Eyeliner</string>
    <string name="blush">Blush</string>
    <string name="eyebrow">Eyebrow</string>
    <string name="bronzer">Bronzer</string>
    <string name="lip_liner">Lip Liner</string>
    <string name="milani">Milani</string>
    <string name="colourpop">Colourpop</string>
    <string name="covergirl">Covergirl</string>
    <string name="clinique">Clinique</string>
    <string name="fenty">Fenty</string>
    <string name="benefit">Benefit</string>
    <string name="smashbox">Smashbox</string>
    <string name="maybelline">Maybelline</string>
    <string name="apply">Apply</string>
    <string name="search_by_tag">Search By Tag</string>
    <string name="organic">Organic</string>
    <string name="canadian">Canadian</string>
    <string name="alcohol_free">Alcohol Free</string>
    <string name="silicone_free">Silicone Free</string>
    <string name="sugar_free">Sugar Free</string>
    <string name="oil_free">Oil Free</string>
    <string name="chemical_free">Chemical Free</string>
    <string name="water_free">Water Free</string>
    <string name="hypoallergenic">Hypoallergenic</string>
    <string name="cruelty_free">Cruelty Free</string>
    <string name="cruelty_free_query">cruelty free</string>
    <string name="colors_not_found">Colors Not Found.</string>
    <string name="save">Save</string>
    <string name="no_favorite_products">No Favorite Products</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="ewg_verified">EWG Verified</string>
    <string name="brand_and_category">Brand And Category</string>
    <string name="only_tags">Only Tags</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="color">Color</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="all_products_removed">All Products Removed.</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="icon_delete">delete</string>
    <string name="icon_save">save</string>
    <string name="remove_from_favorites">Removed from Favorites.</string>
    <string name="product_saved">Product saved.</string>
    <string name="tags">Tags</string>
    <string name="title">Title</string>

</resources>